--- a/src/Trilogic/Trilogic.csproj
+++ b/src/Trilogic/Trilogic.csproj
@@ -53,7 +53,16 @@
     <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <Reference Include="System.Data" />
     <Reference Include="Mono.TextEditor">
-      <HintPath>C:\Program Files %28x86%29\Xamarin Studio\bin\Mono.TextEditor.dll</HintPath>
+      <HintPath>..\..\lib\Mono.TextEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="DiffPlex">
+      <HintPath>..\..\lib\DiffPlex.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.NRefactory">
+      <HintPath>..\..\lib\ICSharpCode.NRefactory.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cairo, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
