Minor GUI change, added "modified" state to main window, change on SchemaCollection, some other minor fixes.

--- a/src/Trilogic/Trilogic.csproj
+++ b/src/Trilogic/Trilogic.csproj
@@ -97,5 +97,17 @@
   <ItemGroup>
     <Folder Include="Utility\" />
     <Folder Include="Data\" />
+    <Folder Include="Assets\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\arrow.png">
+      <DeployService-UseProjectRelativePath>True</DeployService-UseProjectRelativePath>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\arrow-180.png">
+      <DeployService-Deploy>True</DeployService-Deploy>
+      <DeployService-UseProjectRelativePath>True</DeployService-UseProjectRelativePath>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
