--- a/src/Trilogic/Trilogic.csproj
+++ b/src/Trilogic/Trilogic.csproj
@@ -52,9 +52,6 @@
     </Reference>
     <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <Reference Include="System.Data" />
-    <Reference Include="Mono.TextEditor">
-      <HintPath>..\..\lib\Mono.TextEditor.dll</HintPath>
-    </Reference>
     <Reference Include="DiffPlex">
       <HintPath>..\..\lib\DiffPlex.dll</HintPath>
     </Reference>
@@ -63,6 +60,12 @@
     </Reference>
     <Reference Include="Mono.Cairo, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <Private>False</Private>
+    </Reference>
+    <Reference Include="Mono.TextEditor">
+      <HintPath>..\..\lib\Mono.TextEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="Xwt">
+      <HintPath>..\..\lib\Xwt.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
