Add conflict status when a schema is changed on the database, and at the same time file definition has been also changed. Need to create special log file though to compare the modify date of the schema.

--- a/src/Trilogic/Trilogic.csproj
+++ b/src/Trilogic/Trilogic.csproj
@@ -95,6 +95,7 @@
     <Compile Include="CompareWindow.cs" />
     <Compile Include="gtk-gui\Trilogic.CompareWindow.cs" />
     <Compile Include="Data\SchemaCollection.cs" />
+    <Compile Include="Data\SchemaLogBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
